# SDL2-Game-Controller-Test

./: .gitmodules  .hgignore  .hgtags  Makefile.am  README.md  bootstrap  configure.ac
assets/content/: gamecontrollerdb.txt
assets/content/mappings/: hid-wiimote-plus.csv  mayflash-gcn-usb.txt
src/: App.cpp  App.hpp  GameControllerListWindow.cpp  GameControllerListWindow.hpp  GameControllerWindow.cpp  GameControllerWindow.hpp  JoystickListWindow.cpp  JoystickListWindow.hpp  JoystickWindow.cpp  JoystickWindow.hpp  UI.cpp  UI.hpp  Window.cpp  Window.hpp  main.cpp
